# speculative-decoding

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
benchmarks/: run_baseline.py
data/: prompts.json  prompts_tiny.json
docs/: speculative_decoding_theory.md
src/data/: prompts.py
src/decoding/: autoregressive.py
src/models/: loader.py  ollama_loader.py  registry.py  wrapper.py
src/profiling/: metrics.py  timer.py
tests/: test_autoregressive.py  test_kv_cache.py  test_metrics.py  test_timer.py
